# mlops-coding-course

./: .gitignore  404.html  GEMINI.md  LICENSE.txt  Makefile  README.md  index.html  invoke.yaml  justfile  mkdocs.yml  mlops-coding-course.code-workspace  mlops-template-course.code-workspace  poetry.toml  pyproject.toml  sitemap.xml  tasks.py
.github/: FUNDING.yml
0. Overview/: 0.0. Course.html  0.1. Projects.html  0.2. Datasets.html  0.3. Platforms.html  0.4. Mentoring.html  0.5. Assistants.html  0.6. Resources.html  index.html
1. Initializing/: 1.0. System.html  1.1. Python.html  1.2. pyenv.html  1.2. uv.html  1.3. Poetry.html  1.3. uv (project).html  1.4. git.html  1.5. GitHub.html  1.6. VS Code.html  1.7. pyenv (ARCHIVE).html  1.8. Poetry (ARCHIVE).html  index.html
2. Prototyping/: 2.0. Notebooks.html  2.1. Imports.html  2.2. Configs.html  2.3. Datasets.html  2.4. Analysis.html  2.5. Modeling.html  2.6. Evaluations.html  index.html
3. Productionizing/: 3.0. Package.html  3.1. Modules.html  3.2. Paradigms.html  3.3. Entrypoints.html  3.4. Configurations.html  3.5. Documentations.html  3.6. VS Code Workspace.html  index.html
4. Validating/: 4.0. Typing.html  4.1. Linting.html  4.2. Testing.html  4.3. Logging.html  4.4. Security.html  4.5. Formatting.html  4.6. Debugging.html  index.html
5. Refining/: 5.0. Design Patterns.html  5.1. Task Automation.html  5.2. Pre-Commit Hooks.html  5.3. CI-CD Workflows.html  5.4. Software Containers.html  5.5. AI-ML Experiments.html  5.6. Model Registries.html  index.html
6. Sharing/: 6.0. Repository.html  6.1. License.html  6.2. Readme.html  6.3. Releases.html  6.4. Templates.html  6.5. Workstations.html  6.6. Contributions.html  index.html
7. Observability/: 0. Reproducibility.html  1. Monitoring.html  2. Alerting.html  3. Lineage.html  4. Costs-KPIs.html  5. Explainability.html  6. Infrastructure.html  7.0. Reproducibility.html  7.1. Monitoring.html  7.2. Alerting.html  7.3. Lineage.html  7.4. Costs-KPIs.html  7.5. Explainability.html  7.6. Infrastructure.html  index.html
(+149 files in other folders)
