# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "mlops-coding-course"
version = "4.0.0"
description = "Learn how to create, develop, and maintain an MLOps code base."
authors = [{ name = "Médéric HURIER", email = "github@fmind.dev" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.48",
]

# DEPENDENCIES

[dependency-groups]
dev = [
    "invoke>=2.2.0",
]

# TOOLS

[tool.uv]
package = false
