# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "mlops-coding-course"
version = "5.2.0"
description = "Learn how to create, develop, and maintain a state-of-the-art MLOps code base."
authors = [{ name = "Médéric HURIER", email = "github@fmind.dev" }]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.txt" }
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
]

# DEPENDENCIES

[dependency-groups]
dev = [
    "rust-just>=1.39.0",
]

# TOOLS

[tool.uv]
package = false
